data/derived/sp14/progs/unify/prog1843.ml.out
Characters 47-62:
  f b in ( f', f b = b ) , b );;
         ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
